UX: Fix chat channel on mobile sidebar (#313)

--- a/assets/stylesheets/mobile/mobile.scss
+++ b/assets/stylesheets/mobile/mobile.scss
@@ -157,3 +157,7 @@ body.has-full-page-chat {
 .sidebar-container .tc-channels .chat-channel-divider {
   padding-left: 1em;
 }
+
+.sidebar-container .tc-channels .chat-channel-row {
+  padding: 0.5em;
+}
